tests/reject/where_hashable_bad.ty
# `where hashable(T)` instantiated with a non-hashable key type (float is not a
# valid map key). Both compilers must refuse it at instantiation with a clear
# signature error rather than a deep body error.

fn distinct(xs: [$T]) -> int where hashable(T):
    m : [T: int] = []
    for x in xs:
        m[x] = 1
    return len(m)

fn main():
    println(str(distinct([1.5, 2.5])))
